// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeStack -> Search Screen should renders correctly by default with the keyboard open 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F9F6EB",
      "flex": 1,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 1,
            },
            undefined,
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": 24,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="left"
                x1="1"
                x2="0"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "left",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-48}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": 24,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="right"
                x1="0"
                x2="1"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "right",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-48}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 24,
                "position": "absolute",
                "top": "100%",
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="bottom"
                x1="0"
                x2="0"
                y1="0"
                y2="1"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "bottom",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-48}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 24,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="top"
                x1="0"
                x2="0"
                y1="1"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "top",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-48}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={26}
                cy={26}
                fx={26}
                fy={26}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topLeft"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,26 a26,26 0 0 1 26 -26 v2 v24 h-24 h-2 Z"
              fill={
                Array [
                  1,
                  "topLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "translateX": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={26}
                fx={0}
                fy={26}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topRight"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,0 a26,26 0 0 1 26,26 h-2 h-24 v-24 v-2 Z"
              fill={
                Array [
                  1,
                  "topRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateY": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={26}
                cy={0}
                fx={26}
                fy={0}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomLeft"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M26,26 a26,26 0 0 1 -26,-26 h2 h24 v24 v2 Z"
              fill={
                Array [
                  1,
                  "bottomLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateX": -24,
                  },
                  Object {
                    "translateY": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomRight"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M26,0 a26,26 0 0 1 -26,26 v-2 v-24 h24 h2 Z"
              fill={
                Array [
                  1,
                  "bottomRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "position": "absolute",
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGMask
                height="100%"
                maskContentUnits={1}
                maskTransform={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                maskUnits={0}
                name="maskPaintBelow"
                width="100%"
                x="0%"
                y="0%"
              >
                <RNSVGRect
                  fill={4294967295}
                  height="100%"
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width="100%"
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -24,
                      0,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x="100%"
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      -24,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x={0}
                  y="100%"
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -24,
                      -24,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x="100%"
                  y="100%"
                />
              </RNSVGMask>
            </RNSVGDefs>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.08}
              height="100%"
              mask="maskPaintBelow"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 10,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "paddingLeft": 18,
                "paddingRight": 20,
                "width": "100%",
              },
              Object {
                "borderRadius": 24,
              },
            ]
          }
        >
          <TextInput
            editable={true}
            onChangeText={[Function]}
            placeholder="ابحث عن مطعم..."
            placeholderTextColor="#C4C4C4"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "fontFamily": "Cairo-Regular",
                "textAlign": "right",
              }
            }
            value=""
          />
        </View>
      </View>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 10,
          "width": 30,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 20,
      }
    }
  />
</View>
`;

exports[`HomeStack -> Search Screen should show a list of restaurants when searching 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F9F6EB",
      "flex": 1,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 1,
            },
            undefined,
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": 24,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="left"
                x1="1"
                x2="0"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "left",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-48}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": 24,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="right"
                x1="0"
                x2="1"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "right",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-48}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 24,
                "position": "absolute",
                "top": "100%",
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="bottom"
                x1="0"
                x2="0"
                y1="0"
                y2="1"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "bottom",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-48}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 24,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="top"
                x1="0"
                x2="0"
                y1="1"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "top",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-48}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={26}
                cy={26}
                fx={26}
                fy={26}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topLeft"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,26 a26,26 0 0 1 26 -26 v2 v24 h-24 h-2 Z"
              fill={
                Array [
                  1,
                  "topLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "translateX": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={26}
                fx={0}
                fy={26}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topRight"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,0 a26,26 0 0 1 26,26 h-2 h-24 v-24 v-2 Z"
              fill={
                Array [
                  1,
                  "topRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateY": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={26}
                cy={0}
                fx={26}
                fy={0}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomLeft"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M26,26 a26,26 0 0 1 -26,-26 h2 h24 v24 v2 Z"
              fill={
                Array [
                  1,
                  "bottomLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateX": -24,
                  },
                  Object {
                    "translateY": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomRight"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M26,0 a26,26 0 0 1 -26,26 v-2 v-24 h24 h2 Z"
              fill={
                Array [
                  1,
                  "bottomRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "position": "absolute",
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGMask
                height="100%"
                maskContentUnits={1}
                maskTransform={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                maskUnits={0}
                name="maskPaintBelow"
                width="100%"
                x="0%"
                y="0%"
              >
                <RNSVGRect
                  fill={4294967295}
                  height="100%"
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width="100%"
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -24,
                      0,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x="100%"
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      -24,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x={0}
                  y="100%"
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -24,
                      -24,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x="100%"
                  y="100%"
                />
              </RNSVGMask>
            </RNSVGDefs>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.08}
              height="100%"
              mask="maskPaintBelow"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 10,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "paddingLeft": 18,
                "paddingRight": 20,
                "width": "100%",
              },
              Object {
                "borderRadius": 24,
              },
            ]
          }
        >
          <TextInput
            editable={true}
            onChangeText={[Function]}
            placeholder="ابحث عن مطعم..."
            placeholderTextColor="#C4C4C4"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "fontFamily": "Cairo-Regular",
                "textAlign": "right",
              }
            }
            value="restaurant"
          />
        </View>
      </View>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 10,
          "width": 30,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 20,
      }
    }
  >
    <ActivityIndicator
      color="#7C4908"
      size={40}
    />
  </View>
</View>
`;

exports[`HomeStack -> Search Screen should show a not found message when nothing returned from the search 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F9F6EB",
      "flex": 1,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 1,
            },
            undefined,
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": 24,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="left"
                x1="1"
                x2="0"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "left",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-48}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth={3}
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": 24,
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": 3,
              },
            ]
          }
          width={3}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="right"
                x1="0"
                x2="1"
                y1="0"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "right",
                ]
              }
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width={2}
              x={0}
              y={-48}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 24,
                "position": "absolute",
                "top": "100%",
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="bottom"
                x1="0"
                x2="0"
                y1="0"
                y2="1"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "bottom",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-48}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={3}
          bbWidth="100%"
          focusable={false}
          height={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": 24,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 3,
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="top"
                x1="0"
                x2="0"
                y1="1"
                y2="0"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "top",
                ]
              }
              height={2}
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={-48}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": -2,
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={26}
                cy={26}
                fx={26}
                fy={26}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topLeft"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,26 a26,26 0 0 1 26 -26 v2 v24 h-24 h-2 Z"
              fill={
                Array [
                  1,
                  "topLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "translateX": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={26}
                fx={0}
                fy={26}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="topRight"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M0,0 a26,26 0 0 1 26,26 h-2 h-24 v-24 v-2 Z"
              fill={
                Array [
                  1,
                  "topRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": -2,
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateY": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={26}
                cy={0}
                fx={26}
                fy={0}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomLeft"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M26,26 a26,26 0 0 1 -26,-26 h2 h24 v24 v2 Z"
              fill={
                Array [
                  1,
                  "bottomLeft",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight={27}
          bbWidth={27}
          focusable={false}
          height={27}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "left": "100%",
                "position": "absolute",
                "top": "100%",
                "transform": Array [
                  Object {
                    "translateX": -24,
                  },
                  Object {
                    "translateY": -24,
                  },
                ],
              },
              Object {
                "flex": 0,
                "height": 27,
                "width": 27,
              },
            ]
          }
          width={27}
        >
          <RNSVGGroup
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx={0}
                cy={0}
                fx={0}
                fy={0}
                gradient={
                  Array [
                    0.9230769230769231,
                    335544320,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="bottomRight"
                rx={26}
                ry={26}
              />
            </RNSVGDefs>
            <RNSVGPath
              d="M26,0 a26,26 0 0 1 -26,26 v-2 v-24 h24 h2 Z"
              fill={
                Array [
                  1,
                  "bottomRight",
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "position": "absolute",
              },
              Object {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGMask
                height="100%"
                maskContentUnits={1}
                maskTransform={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                maskUnits={0}
                name="maskPaintBelow"
                width="100%"
                x="0%"
                y="0%"
              >
                <RNSVGRect
                  fill={4294967295}
                  height="100%"
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width="100%"
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x={0}
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -24,
                      0,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x="100%"
                  y={0}
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      -24,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x={0}
                  y="100%"
                />
                <RNSVGRect
                  fill={4278190080}
                  height={24}
                  matrix={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      -24,
                      -24,
                    ]
                  }
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                  width={24}
                  x="100%"
                  y="100%"
                />
              </RNSVGMask>
            </RNSVGDefs>
            <RNSVGRect
              fill={4278190080}
              fillOpacity={0.08}
              height="100%"
              mask="maskPaintBelow"
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        onLayout={[Function]}
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
            },
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 10,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "paddingLeft": 18,
                "paddingRight": 20,
                "width": "100%",
              },
              Object {
                "borderRadius": 24,
              },
            ]
          }
        >
          <TextInput
            editable={true}
            onChangeText={[Function]}
            placeholder="ابحث عن مطعم..."
            placeholderTextColor="#C4C4C4"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "fontFamily": "Cairo-Regular",
                "textAlign": "right",
              }
            }
            value="restaurant"
          />
        </View>
      </View>
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 10,
          "width": 30,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "process": [Function],
          }
        }
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 20,
      }
    }
  >
    <ActivityIndicator
      color="#7C4908"
      size={40}
    />
  </View>
</View>
`;
